--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
@@ -18,6 +19,7 @@
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "promise-polyfill": "^8.3.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-config": "^1.5.0",
@@ -31,7 +33,9 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.1",
+    "@types/jest": "^29.4.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.1",
@@ -44,7 +48,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.1",
+    "jest-expo": "^47.0.1",
+    "nock": "^13.3.0",
     "prettier": "2.8.3",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.6.3"
   },
   "private": true
